samples/_failures_safe/1761373633_1c2127_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3843d076.c: In function ‘main’:
./samples/SAFE/__tmp_3843d076.c:162:5: error: expected expression at end of input
  162 |     if (!tokens)
      |     ^~
./samples/SAFE/__tmp_3843d076.c:162:5: error: expected declaration or statement at end of input
